02: Fix horizontal scroll and inscrease the mountains plane

--- a/02-terrain/src/style.css
+++ b/02-terrain/src/style.css
@@ -21,6 +21,7 @@ body {
   background-color: hsl(240, 7%, 8%);
   line-height: 1.45;
   font-family: var(--font-body);
+  overflow-x: hidden;
 }
 
 .webgl {
